# temp

./: .gitignore  .pre-commit-config.yaml  pre-commit-config.yaml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: pull_request_template.md
.github/workflows/: ci.yml
calculator_ai/: __init__.py  logic.py  main.py
tests/: test_api.py  test_logic.py
